changes made to the site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,35 +32,31 @@ const work = await Promise.all(
 
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
+    <img src="/me.jpg" class="mb-10 rounded"/>
     <h4 class="animate font-semibold text-black dark:text-white">
-      Hi, I'm Nano <span class="text-xl">👋🏻</span> 
+      Hi, I'm Ralph <span class="text-xl">👋🏻</span> 
     </h4>
     <div class="space-y-16">
       <section>
         <article class="space-y-4">
           <p class="animate">
-            I am a minimal, seo friendly, accessible portfolio and blog for developers. 
-            I am an even more lightweight version of my popular theme
-            <Link href="https://github.com/markhorn-dev/astro-sphere" aria-label="Astro Sphere on Github" external>
-              Astro Sphere
-            </Link>.
-            I have a lighthouse scores of 100 across the board for performance, 
-            accesibility, best practices and SEO.
+            I am Raphael Amponsah, an accomplished Information Systems Expert and Senior Software Engineer specializing in AI and software engineering. With over 13 years of experience, I deliver cutting-edge solutions for corporate clients, excelling in IT infrastructure development, application support, and security optimization.
           </p>
           <p class="animate">
-            I come packed with full type safety, a sitemap, an rss feed, markdown 
-            and mdx support (use components in your markdown) through astro integrations.
-            I am styled with tailwind and come preconfigured with light, dark and 
-            system/os theme preferences out of the box.
+            I bring a wealth of knowledge and technical expertise, including proficiency in Python, JavaScript, Docker, Kubernetes, and enterprise AI development. My work is driven by a passion for innovation and effective collaboration, consistently achieving project goals and enhancing organizational performance.
+          </p>
+          <p class="animate">
+            My professional journey includes roles such as Lecturer at GIMPA, where I develop AI research and mentor future IT professionals, and Software Engineer at Skyfusion, where I create robust, cloud-based applications. Explore my portfolio and learn more about my projects and publications on my personal website.
           </p>
           <p class="animate">
             Visit
-            <Link href="https://github.com/markhorn-dev/astro-nano" aria-label="Astro Nano on Github" external>
-              Astro Nano on Github
+            <Link href="https://raphaelamponsah.com" aria-label="Raphael Amponsah's Portfolio" external>
+              Raphael Amponsah's Portfolio
             </Link>
-            to fork the repository, read the docs or one-click deploy on Vercel or Netlify. 
+            to view my work, read my latest articles, or connect with me for potential collaborations. You can also check out my GitHub profile for code samples and project repositories.
           </p>
         </article>
+        
       </section>
 
       <section class="animate space-y-6">
