update home inks

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,10 +50,10 @@ const work = await Promise.all(
           </p>
           <p class="animate">
             Visit
-            <Link href="https://raphaelamponsah.com" aria-label="Raphael Amponsah's Portfolio" external>
+            <Link href="https://raphaelamponsah.com/projects" aria-label="Raphael Amponsah's Portfolio" external>
               Raphael Amponsah's Portfolio
             </Link>
-            to view my work, read my latest articles, or connect with me for potential collaborations. You can also check out my GitHub profile for code samples and project repositories.
+            to view my work, read my <Link href="https://raphaelamponsah.com/blog">latest articles</Link>, or connect with me for potential collaborations. You can also check out my GitHub profile for code samples and project repositories.
           </p>
         </article>
         
