--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,12 +13,12 @@ import { SITE } from "@consts";
         </div>
       </Link>
       <nav class="flex gap-1">
-        <Link href="/blog">
+        <!-- <Link href="/blog">
           blog
-        </Link>
-        <span>
+        </Link> -->
+        <!-- <span>
           {`/`}
-        </span>
+        </span> -->
         <Link href="/work">
           work
         </Link>
@@ -27,6 +27,11 @@ import { SITE } from "@consts";
         </span>
         <Link href="/projects">
           projects
+        </Link>
+          {`/`}
+        </span>
+        <Link href="/research">
+          research
         </Link>
       </nav>
     </div>
