--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,8 +58,8 @@ const work = await Promise.all(
         </article>
         
       </section>
-
-      <section class="animate space-y-6">
+<!-- <img src="/ad1.gif" class="block py-2" /> -->
+      <!-- <section class="animate space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">
             Latest posts
@@ -75,7 +75,7 @@ const work = await Promise.all(
             </li>
           ))}
         </ul>
-      </section>
+      </section> -->
 
       <section class="animate space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
